cmake_minimum_required(VERSION 3.5)
project(async_log)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Threads)
add_subdirectory(thread)
add_subdirectory(datetime)
add_subdirectory(logging)
add_executable(log_test log_test.cpp)
target_link_libraries(log_test time thread log ${CMAKE_THREAD_LIBS_INIT})
add_executable(logfile_test logfile_test.cpp)
target_link_libraries(logfile_test time thread log ${CMAKE_THREAD_LIBS_INIT})
