cmake_minimum_required(VERSION 3.5)
project(logging)
find_package(Threads)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES test.cpp)
add_subdirectory(thread)
add_subdirectory(datetime)
#add_subdirectory(logging)
add_executable(logging ${SOURCE_FILES})
target_link_libraries(logging ${CMAKE_THREAD_LIBS_INIT} time thread)