cmake_minimum_required(VERSION 3.5)
project(logging_file)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Threads)
set(SOURCE_FILES test.cpp)
add_subdirectory(thread)
add_subdirectory(datetime)
add_subdirectory(logging)
add_executable(test_ ${SOURCE_FILES})
target_link_libraries(test_ time thread log ${CMAKE_THREAD_LIBS_INIT})
