cmake_minimum_required(VERSION 3.5)
project(chat)
find_package(Threads)
include_directories(/home/zhouyang/Documents/muduo/include)
link_directories(/home/zhouyang/Documents/muduo/lib)
add_executable(server server.cpp codec.h)
add_executable(client client.cpp codec.h)
target_link_libraries(server muduo_net muduo_base ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(client muduo_net muduo_base ${CMAKE_THREAD_LIBS_INIT})