cmake_minimum_required(VERSION 3.5)
project(hub)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/home/zhouyang/Documents/muduo/include)
link_directories(/home/zhouyang/Documents/muduo/lib)
add_executable(hub hub.cpp codec.h codec.cpp )
target_link_libraries(hub muduo_inspect)
add_library(muduo_pubsub pubsub.cpp codec.h codec.cpp)
target_link_libraries(muduo_pubsub muduo_net)
add_executable(pub pub.cpp)
target_link_libraries(pub muduo_pubsub)
add_executable( sub sub.cpp)
target_link_libraries(sub muduo_pubsub)