cmake_minimum_required(VERSION 3.5)
project(test)
find_package(Threads)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
# only need add .cpp/.cc file
set(SOURCE_FILES1 test1.cpp Atomic.h Thread.cpp EventLoop.cpp)
add_executable(test1 ${SOURCE_FILES1})
target_link_libraries(test1 ${CMAKE_THREAD_LIBS_INIT})
set(SOURCE_FILES2 test2.cpp Atomic.h Thread.cpp EventLoop.cpp)
add_executable(test2 ${SOURCE_FILES2})
target_link_libraries(test1 ${CMAKE_THREAD_LIBS_INIT})