cmake_minimum_required(VERSION 3.5)
project(TimeQueue)
find_package(Threads)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(lib_src datetime/Timestamp.cc Atomic.h Callbacks.h Timer.cpp TimerId.h Thread.cpp EventLoop.cpp Poller.cpp Channel.cpp TimerQueue.cpp )
add_library(event ${lib_src})
set(SOURCE_FILES1 main.cpp )
add_executable(main ${SOURCE_FILES1})
target_link_libraries(main event ${CMAKE_THREAD_LIBS_INIT})
add_executable(crash crash.cpp)
target_link_libraries(crash event ${CMAKE_THREAD_LIBS_INIT})
